package NYT.NJobTrackerClient.NProto;

import "yt/core/misc/error.proto";
import "yt/core/misc/guid.proto";
import "yt/ytlib/chunk_client/data_statistics.proto";
import "yt/ytlib/node_tracker_client/node.proto";
import "yt/ytlib/cgroup/statistics.proto";

////////////////////////////////////////////////////////////////////////////////

// Describes a job to be run at a node.
message TJobSpec
{
    required int32 type = 1;

    extensions 100 to max;
}

message TJobStatistics
{
    required NChunkClient.NProto.TDataStatistics input = 1;
    required NChunkClient.NProto.TDataStatistics output = 2;
    required int64 time = 3;

    optional NCGroup.NProto.TCpuAccountingStatistics cpu = 4;
    optional NCGroup.NProto.TBlockIOStatistics block_io = 5;

    optional string statistics = 6;
}

// Describes the outcome of the job, in particular if it has finished successfully.
message TJobResult
{
    required NYT.NProto.TError error = 1;
    required TJobStatistics statistics = 2; 

    extensions 100 to max;
}

// Describes the current job status.
message TJobStatus
{
    required NYT.NProto.TGuid job_id = 1;
    required int32 job_type = 2;
    required int32 state = 3;
    required int32 phase = 4;
    required double progress = 5;
    optional TJobResult result = 6;
    optional NNodeTrackerClient.NProto.TNodeResources resource_usage = 7;
}

////////////////////////////////////////////////////////////////////////////////

